--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@ html {
 	box-sizing: border-box;
 }
 
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 *,
 ::before,
 ::after {
@@ -9,19 +13,22 @@ html {
 }
 
 article {
-	border: 1px solid #f00;
-	border-radius: 0.5em;
 	display: flex;
 	width: 80%;
 	margin: auto;
+	justify-content: space-around;
 	flex-wrap: wrap;
 }
 
 figure {
-	border: 1px solid #00f;
 	max-width: 100%;
+	margin: 0 auto;
 }
 
 figure img {
 	width: 100%;
+}
+
+figure div {
+	height: 10em;
 }
