--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -20,15 +20,21 @@ article {
 	flex-wrap: wrap;
 }
 
-figure {
+article figure {
 	max-width: 100%;
 	margin: 0 auto;
 }
 
-figure img {
+article figure img {
 	width: 100%;
 }
 
-figure div {
+article figure div {
 	height: 10em;
+}
+
+.product figure {
+	width: 25rem;
+	border-radius: 0.5em;
+	margin: auto;
 }
